<resources>
    <string name="app_name">Weight Tracker</string>s
    <string name="empty_weight_error">Weight cannot be empty!</string>
    <string name="weight_number_error">Weight must be a number!</string>
    <string name="select_date">Select Date</string>
    <string name="login_description">Enter an email and password to log in or create a new account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="submit">Submit</string>
    <string name="continue_as_guest"><u>Continue as guest</u></string>
    <string name="date_added_header">Date</string>
    <string name="weight_header">Weight</string>
    <string name="goal_weight">Goal\nWeight</string>
    <string name="add_weight">add weight</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="sms_description">Automatically send an SMS message when you reach your goal weight.</string>
    <string name="phone_number">Phone number</string>
    <string name="delete_entry">Delete Weight</string>
    <string name="add_new_weight">Add New Weight</string>
    <string name="date_hint">Date</string>
    <string name="weight_hint">Weight</string>
    <string name="home_menu">Home</string>
    <string name="history_menu">History</string>
    <string name="settings_menu">Settings</string>
    <string name="anonymous_login">anonymous</string>
    <string name="start_weight">Start\nWeight</string>
    <string name="edit_weight_label">Edit Weight</string>
    <string name="current_weight">Current Weight</string>
    <string name="set_goal_weight">Set Goal Weight</string>
    <string name="start_date">Start Date</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_goal_weight">Change Goal Weight</string>
    <string name="target_loss">Target Loss</string>
    <string name="stats">Stats</string>
    <string name="lost_so_far">Lost So Far</string>
    <string name="remaining">Remaining</string>
    <string name="unit_pounds">" lbs"</string>
    <string name="unit_kilos">" kgs"</string>
    <string name="generic_error">An unknown error has occurred</string>
    <string name="error_finding_weight_by_id">Error finding weight by ID</string>
    <string name="could_not_find_account">Could not find account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
    <string name="title_activity_history_screen">HistoryScreen</string>
</resources>