<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weight_progress_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:cs_maintain_equal_circle="false"
            app:cs_circle_color="?attr/colorPrimaryContainer"
            app:cs_circle_progress_color="?attr/colorPrimary"
            app:cs_circle_stroke_width="30dp"
            app:cs_circle_style="round"
            app:cs_disable_pointer="true"
            app:cs_start_angle="190"
            app:cs_end_angle="350"
            app:cs_hide_progress_when_empty="true"
            app:cs_max="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/current_weight_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toTopOf="@id/progress_bar"
            android:orientation="vertical">
            <TextView
                android:id="@+id/progress_percent_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/textAppearanceHeadline2"
                android:textAlignment="center"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_weight"
                android:textAlignment="center"
                style="?attr/textAppearanceHeadlineSmall"/>

            <TextView
                android:id="@+id/current_weight_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:text="235 Lbs"
                style="?attr/textAppearanceHeadlineSmallEmphasized"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progress_bar">

            <TextView
                style="?attr/textAppearanceTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_weight"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/start_weight_text"
                style="?attr/textAppearanceTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/goal_weight_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="@+id/progress_bar"
            app:layout_constraintBottom_toBottomOf="@id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_weight"
                style="?attr/textAppearanceTitleMedium"
                android:textAlignment="center"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/goal_weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/textAppearanceTitleMedium"
                android:textAlignment="center"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <Button
            android:id="@+id/set_goal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/set_goal_weight"
            android:textSize="24sp"
            android:paddingVertical="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/current_weight_layout"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>